src/snapshots/gh_stack__markdown__tests__build_table_all_closed_shows_checkmark.snap
---
source: src/markdown.rs
expression: table
---
### ✅ Stacked PR Chain: COMPLETE-STACK
| PR | Title | Merges Into |
|:--:|:------|:-----------:|
|#1|~~First~~|-|
|#2|~~Second~~|#1|
