src/snapshots/gh_stack__markdown__tests__build_table_single_pr.snap
---
source: src/markdown.rs
expression: table
---
### Stacked PR Chain: JIRA-123
| PR | Title | Status |  Merges Into  |
|:--:|:------|:-------|:-------------:|
|#1|Add new feature|![](https://img.shields.io/github/pulls/detail/state/user/repo/1?label=Pending)|-|
