src/snapshots/gh_stack__markdown__tests__build_table_with_badges_mixed_states.snap
---
source: src/markdown.rs
expression: table
---
### Stacked PR Chain: BADGES-MIXED
| PR | Title | Status | Merges Into |
|:--:|:------|:-------|:-----------:|
|#1|~~Merged base~~|![](https://img.shields.io/github/pulls/detail/state/org/repo/1?label=%20)|-|
|#2|Open follow-up|![](https://img.shields.io/github/pulls/detail/state/org/repo/2?label=Pending)|#1|
|#3|*(Draft) Draft WIP*|![](https://img.shields.io/github/pulls/detail/state/org/repo/3?label=Pending)|#2|
