src/snapshots/gh_stack__markdown__tests__build_table_with_closed_pr.snap
---
source: src/markdown.rs
expression: table
---
### ✅ Stacked PR Chain: CLOSED-TEST
| PR | Title | Merges Into |
|:--:|:------|:-----------:|
|#1|~~Completed feature~~|-|
