src/snapshots/gh_stack__markdown__tests__build_table_with_draft_pr.snap
---
source: src/markdown.rs
expression: table
---
### Stacked PR Chain: DRAFT-TEST
| PR | Title | Status |  Merges Into  |
|:--:|:------|:-------|:-------------:|
|#1|*(Draft) Work in progress*|![](https://img.shields.io/github/pulls/detail/state/user/repo/1?label=Pending)|-|
