src/snapshots/gh_stack__markdown__tests__build_table_with_merged_pr.snap
---
source: src/markdown.rs
expression: table
---
### ✅ Stacked PR Chain: MERGED-TEST
| PR | Title | Merges Into |
|:--:|:------|:-----------:|
|#1|~~Merged feature~~|-|
